--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
+name = "MDI"
+uuid = "ac8bfcd4-1422-434b-bf6c-18577b53b8d8"
+authors = ["Christian Guinar", "Simon Léger"]
+version = "0.1.0"
+
 [deps]
-CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
-MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
-StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
